[package]
name = "hex-file-flasher-rs"
version = "0.1.0"
authors = ["Roberts Ivanovs <roberts.ivanovs1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
serial = "0.4.0"
regex = "1.3.9"
rusqlite = {version = "0.23.1", features = ["bundled", "i128_blob"]}
